--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             color: #3d2514;
             font-size: 1.5vw;
             margin: 1vw;
+            border-radius: 60px;
             padding: 0px 5px;
             text-decoration: none;
         }
